force-app/main/default/objects/TESTproperty__c/TESTproperty__c.object-meta.xml
<CustomObject>
    <label>【テスト】物件</label>
    <nameField>
        <label>【テスト】物件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>