force-app/main/default/objects/TESTproperty__c/fields/Field10__c.field-meta.xml
<CustomField>
    <fullName>Field10__c</fullName>
    <label>延床面積</label>
    <type>Date</type>
</CustomField>