force-app/main/default/objects/TESTproperty__c/fields/Field11__c.field-meta.xml
<CustomField>
    <fullName>Field11__c</fullName>
    <label>段階</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>設計前</fullName>
            </value>
            <value>
                <fullName>入札</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>