force-app/main/default/objects/TESTproperty__c/fields/Field12__c.field-meta.xml
<CustomField>
    <fullName>Field12__c</fullName>
    <label>状況_住環境</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未着手</fullName>
            </value>
            <value>
                <fullName>追及中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>